--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon1.png" alt="Icon">
+                            <img src="icons/icon1.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -101,7 +101,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon2.png" alt="Icon">
+                            <img src="icons/icon2.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -120,7 +120,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon3.png" alt="Icon">
+                            <img src="icons/icon3.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -140,7 +140,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon4.png" alt="Icon">
+                            <img src="icons/icon4.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -157,7 +157,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon5.png" alt="Icon">
+                            <img src="icons/icon5.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -175,7 +175,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon6.png" alt="Icon">
+                            <img src="icons/icon6.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
@@ -193,7 +193,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon7.png" alt="Icon">
+                            <img src="icons/icon7.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
