--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_image">
-                            <img src="../src/icons/icon8.png" alt="Icon">
+                            <img src="icons/icon8.png" alt="Icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">
