--- a/TheWitcher/reviews.html
+++ b/TheWitcher/reviews.html
@@ -43,7 +43,7 @@
                 <div class="content">
                     <h1 class="main-title">Отзывы</h1>
                     <div class="reviews__wrapper">
-                        <div class="reviews__items">
+                        <blockquote class="reviews__items">
                             <div class="reviews__text">
                                 <div class="reviews__name">Лютик</div>
                                 <div class="reviews__subtitle">Бард</div>
@@ -51,11 +51,11 @@
                                     Ведьмаку заплатите чеканной монетой!
                                 </p>
                             </div>
-                        </div>
+                        </blockquote>
                         <hr>
                     </div>
                     <div class="reviews__wrapper">
-                        <div class="reviews__items">
+                        <blockquote class="reviews__items">
                             <div class="reviews__text">
                                 <div class="reviews__name">Весемир</div>
                                 <div class="reviews__subtitle">Ведьмак</div>
@@ -63,7 +63,7 @@
                                     Помнишь, как мы в Третагоре на помойке охотились на ригера? Ты потом пол-дня в бане отскребался.
                                 </p>
                             </div>
-                        </div>
+                        </blockquote>
                         <hr>
                     </div>
                 </div>
